processor/src/test/resources/good/deferred-processing/Foo.java
package foo;

import io.norberg.automatter.AutoMatter;

@AutoMatter
public interface Foo {
  BarBuilder foo();
}