processor/src/test/resources/bad/ClassFoo.java
import io.norberg.automatter.AutoMatter;

@AutoMatter
public class ClassFoo {
  public boolean foo();
  public byte bar();
}